--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 <div class="carousel-item active">
                     <img src="images/cover/cover-3.jpg" class="d-block w-100 img-fluid" alt="...">
                     <div class="carousel-caption  d-md-block">
-                        <h1 class="slider-header text-warning">Get Started Digital
-                            Learning</h1>
+                        <p class="slider-header text-warning">Get Started Digital
+                            Learning</p>>
                         <p class="py-3 text-light fw-bold">Undoubtedly move forward on the path of dreams, stop
                             unemployment. We are by your side.</p>
                         <div class="btn btn-primary fw-bold px-4 pt-2">Get Started</div>
@@ -144,8 +144,8 @@
             <div class="row row-cols-1 row-cols-lg-2 gy-3">
                 <!-- 1st card -->
                 <div class="card border border-0">
-                    <div class="col me-2 rounded-3 shadow-lg d-flex">
-                        <div class="col-md-4">
+                    <div class="col me-2 rounded-3 shadow-lg d-md-flex">
+                        <div class=" col-md-4">
                             <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="col-md-7 ms-2">
@@ -162,7 +162,7 @@
                 </div>
                 <!-- 2nd card  -->
                 <div class="card border border-0">
-                    <div class="col me-2 rounded-3 shadow-lg d-flex">
+                    <div class="col me-2 rounded-3 shadow-lg d-md-flex">
                         <div class="col-md-4">
                             <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
                         </div>
@@ -179,7 +179,7 @@
                 </div>
                 <!-- 3rd card  -->
                 <div class="card border border-0">
-                    <div class="col me-2 rounded-3 shadow-lg d-flex">
+                    <div class="col me-2 rounded-3 shadow-lg d-md-flex">
                         <div class="col-md-4">
                             <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
                         </div>
@@ -197,7 +197,7 @@
                 </div>
                 <!-- 4th card  -->
                 <div class="card border border-0">
-                    <div class="col me-2 rounded-3 shadow-lg d-flex">
+                    <div class="col me-2 rounded-3 shadow-lg d-md-flex">
                         <div class="col-md-4">
                             <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
                         </div>
@@ -214,7 +214,7 @@
                 </div>
                 <!-- 5th card  -->
                 <div class="card border border-0">
-                    <div class="col me-2 rounded-3 shadow-lg d-flex">
+                    <div class="col me-2 rounded-3 shadow-lg d-md-flex">
                         <div class="col-md-4">
                             <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
                         </div>
@@ -231,7 +231,7 @@
                 </div>
                 <!-- 6th card  -->
                 <div class="card border border-0">
-                    <div class="col me-2 rounded-3 shadow-lg d-flex">
+                    <div class="col me-2 rounded-3 shadow-lg d-md-flex">
                         <div class="col-md-4">
                             <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
                         </div>
@@ -482,78 +482,85 @@
             <div class="accordion mb-5" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Accordion Item #1
+                            what is the difference of flexbox and grid ?
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            <span class="fw-bold">Grid is made for two-dimensional layout while Flexbox is for
+                                one.</span> This means Flexbox can
+                            work on either row or columns at a time, but Grids can work on both. Flexbox, gives you more
+                            flexibility while working on either element (row or column).
                         </div>
                     </div>
                 </div>
 
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Accordion Item #2
+                            what is the difference of bootstrap and tailwind ?
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
-                            the collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            The significant difference between Tailwind CSS and Bootstrap is that Tailwind offers
+                            predesigned widgets to build a site from scratch with fast UI development, while Bootstrap
+                            comes with a set of pre-styled responsive, mobile-first components that possess a definite
+                            UI kit.
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Accordion Item #3
+                            what is css box model ?
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            In CSS, the term "box model" is used when talking about design and layout.
+
+                            The CSS box model is essentially a box that wraps around every HTML element. It consists of:
+                            margins, borders, padding, and the actual content.
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingfour">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapsefour" aria-expanded="false" aria-controls="collapsefour">
-                            Accordion Item #3
+                            what is semantic tag ?
                         </button>
                     </h2>
                     <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingfour"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            The HTML semantics refers to <span class="fw-bold">the tags that provide meaning to an HTML
+                                page rather than just presentation.</span> It makes HTML more comprehensible by better
+                            defining the different sections and layout of web pages
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingfive">
+                        <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapsefive" aria-expanded="false" aria-controls="collapsefive">
+                            what is responsive in website ?
+                        </button>
+                    </h2>
+                    <div id="collapsefive" class="accordion-collapse collapse" aria-labelledby="headingfour"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            A responsive web design <span class="fw-bold">automatically adjusts for different-sized
+                                screens and viewports.</span> With a responsive website, someone can browse your website
+                            from any device and it will still look and function perfectly.
                         </div>
                     </div>
                 </div>
@@ -577,7 +584,7 @@
         <!-- company logo section end  -->
     </main>
     <footer class="bg-dark text-center pt-5">
-        <h2 class=" text-white">Pro Edu</h2>
+        <h2 class=" text-white">Great learning</h2>
         <p class="text-white">Office 41, Zawaya Buildin, Ghala Muscat, </p>
         <p class="text-white">Sultanate of Oman
         </p>
