--- a/index.html
+++ b/index.html
@@ -102,21 +102,27 @@
                         <div class="carousel-item">
                             <img src="images/cover/cover-2.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption  d-md-block">
-                                <h1 class="slider-header text-warning">Get Started Digital
-                                    Learning</h1>
-                                <p class="py-3 text-light fw-bold">Undoubtedly move forward on the path of dreams, stop
-                                    unemployment. We are by your side.</p>
-                                <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
+                                <div class="slider-info">
+                                    <h1 class="slider-header text-warning flex-nowrap">Get Started Digital
+                                        Learning</h1>
+                                    <p class="py-3 text-light fw-bold slider-text">Undoubtedly move forward on the path
+                                        of dreams, stop
+                                        unemployment. We are by your side.</p>
+                                    <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
+                                </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="images/cover/cover-3.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption  d-md-block ">
-                                <h1 class="slider-header text-warning">Get Started Digital
-                                    Learning</h1>
-                                <p class="py-3 text-light fw-bold">Undoubtedly move forward on the path of dreams, stop
-                                    unemployment. We are by your side.</p>
-                                <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
+                                <div class="slider-info">
+                                    <h1 class="slider-header text-warning flex-nowrap">Get Started Digital
+                                        Learning</h1>
+                                    <p class="py-3 text-light fw-bold slider-text">Undoubtedly move forward on the path
+                                        of dreams, stop
+                                        unemployment. We are by your side.</p>
+                                    <div class="btn btn-primary fw-bold px-4 py-2">Get Started</div>
+                                </div>
                             </div>
                         </div>
                     </div>
